EA: alignment of row and hover state fixed

--- a/src/components/v2/appDetails/k8Resource/nodeType/nodeType.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeType/nodeType.scss
@@ -100,3 +100,7 @@
         color: red;
     }
 }
+
+.node-row__pdding{
+    padding-left: 32px !important;
+}
